# habitledger-agent

./: .dockerignore  .env.example  .gitattributes  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  Dockerfile  PROJECT_OVERVIEW.md  README.md  SUBMISSION.md  app.py  check_quality.sh  copilot_instructions.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: behaviour_principles.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION_RESULTS.md  KAGGLE_INSTRUCTIONS.md  OBSERVABILITY.md  QUOTA_MANAGEMENT.md
notebooks/: demo.ipynb
scripts/: check_quality.sh  deploy_cloudrun.sh  fix_quality.sh  test_local_deployment.sh  verify_setup.sh
src/: __init__.py  adk_config.py  adk_tools.py  behaviour_engine.py  coach.py  config.py  llm_client.py  memory.py  memory_service.py  models.py  session_db.py  templates.py  utils.py
src/habitledger_adk/: __init__.py  agent.py  runner.py
tests/: __init__.py  conftest.py  test_app.py  test_behaviour_engine.py  test_coach.py  test_config.py  test_evaluation.py  test_llm_integration.py  test_memory.py  test_memory_service.py  test_models.py  test_runner_async.py  test_utils.py
